Fixed canvas zoom and out of bounds drawing.
out of bounds drawing might need a better fix.

--- a/web/canvas.css
+++ b/web/canvas.css
@@ -3,8 +3,6 @@
 }
 
 main {
-  width: 800px;
-  border: 1px solid #e0e0e0;
   margin: 0 auto;
   display: flex;
   flex-grow: 1;
